# netdrop

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TESTING.md
.github/workflows/: api.yaml  frontend.yaml  netdrop.yaml
migrations/2025-07-09-172828_create_files/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  tests.rs
tests/: integration_tests.rs  unit_tests.rs
web/netdrop/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
web/netdrop/src/: App.tsx  main.tsx
web/netdrop/src/components/common/: background.tsx  dropzone.tsx
web/netdrop/src/config/: index.ts
web/netdrop/src/contexts/: file-upload-context.tsx
