[package]
name = "netdrop"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.11", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15.7"
include_dir = "0.7.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
serde_json = "1.0"
